--- a/Gallery.html
+++ b/Gallery.html
@@ -94,7 +94,7 @@
           <img src="img_&_Vids/9.jpg" alt="">
       </a>
       <a href="#" class="image ice-cream">
-        <img src="img_&_Vids/bj.jpg" alt="">
+        <img src="img_&_Vids/travel.jpg" alt="">
     </a>
     <a href="#" class="image sandwich">
         <img src="img_&_Vids/2.jpg" alt="">
