--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 <div class="container-fluid p-0">
   <div class="row">
     <div class="col-12 d-flex justify-content-center mt-0">
-      <div class="site-intro" style="margin-top: -30px;">
+      <div class="site-intro" style="margin-top: -8px; width: 100%;">
         <video autoplay muted loop class="background-video w-100">
-          <source src="img_&_Vids/mhlaba_.mp4" type="video/mp4">
+          <source src="img_&_Vids/jayVid.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -114,7 +114,7 @@
 
 <!-- footer -->
 
-<div class="jumbotron-fluid pt-0">
+<div class="jumbotron-fluid mt-0 pt-0">
   <div class="container-fluid" style="background-color: #054a29; width: 100%; height:max-content;">
     <div class="row text-center pt-4" >
       <div class="col-sm-6 ">
