--- a/contactus.html
+++ b/contactus.html
@@ -55,12 +55,12 @@
               <form class="p-4 mt-2 " >
                 <div class="mb-3">
                   <label for="nameInput" class="form-label">Enter your Name</label>
-                  <input type="text" class="form-control" id="nameInput" placeholder="Enter your full name - E.g. Justice Tau">
+                  <input type="text" class="form-control" required id="nameInput" placeholder="Enter your full name - E.g. Justice Tau">
                   <span id="nameError" class="text-danger"></span>
                 </div>
               <div class="mb-3">
                 <label for="emailInput" class="form-label">Email ID</label>
-                <input type="text" class="form-control" id="emailInput" placeholder="Enter your E-mail address - E.g. example@gmail.com">
+                <input type="text" class="form-control" required id="emailInput" placeholder="Enter your E-mail address - E.g. example@gmail.com">
                 <span id="emailError" class="text-danger"></span>
               </div>
               <div class="mb-3">
