fixed direction and started working on event posting page

--- a/Gallery.html
+++ b/Gallery.html
@@ -46,6 +46,11 @@
       <li class="nav-item">
         <a class="nav-link active" style="color: #00a8e8;" href="Gallery.html">Gallery</a>
       </li>
+
+      
+      <li class="nav-item">
+        <a class="nav-link " href="adminPage.html">Post Event</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -174,8 +179,8 @@ $(document).ready(function(){
       <div class="col-sm-6 ">
         <h5 class="display-4" style="color: #bfd8bd; font-size: xx-large; font-weight: 300;">Get Directions</h5>
           <i class="fas fa-map-marker-alt" style="color: #00a8e8;"></i> <!-- Icon for address -->
-          <a href="https://www.google.com/maps/dir/?api=1&destination=Tsweu+St,+Mamelodi+-+SAS,+Pretoria,+0122"
-            target="_blank"> Extension 5 kopanong <br> Soshanguve Pretoria <br> 0152</a>
+          <a href="https://www.google.com/maps/dir/?api=1&destination=Extension+5+kopanong,+Soshanguve+-+,+Pretoria,+0152"
+          target="_blank"> Extension 5 kopanong <br> Soshanguve Pretoria <br> 0152</a>
         
       </div>
       <div class="col-sm-6 ">
