changed the Gallery

--- a/Gallery.html
+++ b/Gallery.html
@@ -46,8 +46,6 @@
       <li class="nav-item">
         <a class="nav-link active" style="color: #00a8e8;" href="Gallery.html">Gallery</a>
       </li>
-
-      
       <li class="nav-item">
         <a class="nav-link " href="adminPage.html">Post Event</a>
       </li>
@@ -55,88 +53,30 @@
   </div>
 </nav>
 
-<h1 class="display-3 text-center" style="color: #bfd8bd; background-color: #054a29; padding-bottom: 10px;">Gallery</h1>
+<h1 class="display-3 text-center" style="color: #bfd8bd; background-color: #054a29;">Bomojay's Gallery</h1>
 
-<div class="gallery">
-  <ul class="controls">
-      <li class="buttons active" data-filter="all">all</li>
-      <li class="buttons" data-filter="ice-cream">Memories</li>
-      <li class="buttons" data-filter="chocolate">Adventure </li>
-      <li class="buttons" data-filter="cake">Friendship</li>
-      <li class="buttons" data-filter="juice">Special Events</li>
-      <li class="buttons" data-filter="sandwich">Videos</li>
-  </ul>
-
-  <div class="image-container">
-
-      <a href="#" class="image ice-cream">
-          <img src="img_&_Vids/1.jpg" alt="">
-      </a>
-      <a href="#" class="image ice-cream">
-          <img src="img_&_Vids/2.jpg" alt="">
-      </a>
-      <a href="#" class="image ice-cream">
-          <img src="img_&_Vids/3.jpg" alt="">
-      </a>
-
-      <a href="#" class="image chocolate">
-          <img src="img_&_Vids/4.jpg" alt="">
-      </a>
-      <a href="#" class="image chocolate">
-          <img src="img_&_Vids/porry.jpg" alt="">
-      </a>
-
-      <a href="#" class="image cake">
-          <img src="img_&_Vids/6.jpg" alt="">
-      </a>
-      <a href="#" class="image cake">
-          <img src="img_&_Vids/7.jpg" alt="">
-      </a>
-      <a href="#" class="image cake">
-          <img src="img_&_Vids/8.jpg" alt="">
-      </a>
-      <a href="#" class="image cake">
-          <img src="img_&_Vids/9.jpg" alt="">
-      </a>
-      <a href="#" class="image ice-cream">
-        <img src="img_&_Vids/travel.jpg" alt="">
-    </a>
-    <a href="#" class="image sandwich">
-        <img src="img_&_Vids/2.jpg" alt="">
-    </a>
-    <a href="#" class="image ice-cream">
-        <img src="img_&_Vids/3.jpg" alt="">
-    </a>
-
-    <a href="#" class="image chocolate">
-        <img src="img_&_Vids/4.jpg" alt="">
-    </a>
-    <a href="#" class="image chocolate">
-        <img src="img_&_Vids/5.jpg" alt="">
-    </a>
-
-    <a href="#" class="image cake">
-        <img src="img_&_Vids/6.jpg" alt="">
-    </a>
-    <a href="#" class="image sandwich">
-        <img src="img_&_Vids/7.jpg" alt="">
-    </a>
-    <a href="#" class="image cake">
-        <img src="img_&_Vids/8.jpg" alt="">
-    </a>
-    <a href="#" class="image sandwich">
-        <img src="img_&_Vids/9.jpg" alt="">
-    </a>
-  </div>
+<div class="gallery mt-5 pt-5 align-content-center">
+ 
+  <span style="--i:1"><img src="img_&_Vids/1.jpg"></span>
+   <span style="--i:2"><img src="img_&_Vids/2.jpg"></span>
+   <span style="--i:3"><img src="img_&_Vids/3.jpg"></span>
+   <span style="--i:4"><img src="img_&_Vids/4.jpg"></span>
+   <span style="--i:5"><img src="img_&_Vids/5.jpg"></span>
+   <span style="--i:6"><img src="img_&_Vids/6.jpg"></span>
+   <span style="--i:7"><img src="img_&_Vids/7.jpg"></span>
+   <span style="--i:8"><img src="img_&_Vids/8.jpg"></span>
+   <span style="--i:9"><img src="img_&_Vids/9.jpg"></span>
+   <span style="--i:10"><img src="img_&_Vids/home.jpg"></span>
+   <span style="--i:12"><img src="img_&_Vids/livin.jpg"></span>
+   <span style="--i:13"><img src="img_&_Vids/bomo.jpg"></span>
+   <span style="--i:14"><img src="img_&_Vids/bomoj.jpg"></span>
+   <span style="--i:15"><img src="img_&_Vids/2guys.jpg"></span>
+   <span style="--i:16"><img src="img_&_Vids/cont img.jpg"></span>
+   <span style="--i:17"><img src="img_&_Vids/1.jpg"></span>
+   <span style="--i:18"><img src="img_&_Vids/jita.jpg"></span>
+   <span style="--i:19"><img src="img_&_Vids/6.jpg"></span>
 
 </div>
-
-
-<!-- jquery cdn link  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<!-- magnific popup js cdn link  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
 <script>
 
@@ -173,7 +113,7 @@ $(document).ready(function(){
 
 <!-- footer -->
 
-<div class="jumbotron-fluid pt-0">
+<div class="jumbotron-fluid pt-5 mt-5">
   <div class="container-fluid" style="background-color: #054a29; width: 100%; height:max-content;">
     <div class="row text-center pt-4" >
       <div class="col-sm-6 ">
@@ -205,10 +145,15 @@ $(document).ready(function(){
 </div>
 
 
-<!-- Bootstrap JS and Popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- jQuery (required for Bootstrap) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- magnific popup js cdn link  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
 </body>
 </html>
