--- a/Service.html
+++ b/Service.html
@@ -56,6 +56,34 @@
 <div id="events-container" class="container mt-5 mb-4"></div>
 
 
+<script>
+const eventsContainer = document.getElementById('events-container');
+
+  // Fetch and display events
+  function fetchAndDisplayEvents() {
+    db.collection('events').get()
+      .then((querySnapshot) => {
+        querySnapshot.forEach((doc) => {
+          const eventData = doc.data();
+          const eventElement = document.createElement('div');
+          eventElement.classList.add('event');
+          eventElement.innerHTML = `
+            <h2>${eventData.event_title}</h2>
+            <p>Date: ${eventData.event_date}</p>
+            <p>${eventData.event_description}</p>
+          `;
+          eventsContainer.appendChild(eventElement);
+        });
+      })
+      .catch((error) => {
+        console.log('Error getting documents: ', error);
+      });
+  }
+
+  // Call the function when the page loads
+window.addEventListener('load', fetchAndDisplayEvents);
+
+  </script>
 
 <!-- footer -->
 
