--- a/Gallery.html
+++ b/Gallery.html
@@ -47,13 +47,43 @@
         <a class="nav-link active" style="color: #00a8e8;" href="Gallery.html">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="adminPage.html">Post Event</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
       </li>
+
+      <!-- Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-center display-4" style="color: #054a29;" id="loginModalLabel">Admin Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="loginForm">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+      <!--  -->
     </ul>
   </div>
 </nav>
 
-<h1 class="display-3 text-center" style="color: #bfd8bd; background-color: #054a29;">Bomojay's Gallery</h1>
+<h1 class="display-3 text-center" style="color: #bfd8bd; background-color: #054a29; padding-bottom: 10px;">Bomojay's Gallery</h1>
 
 <div class="gallery mt-5 pt-5 align-content-center">
  
@@ -144,6 +174,7 @@ $(document).ready(function(){
   </div>
 </div>
 
+<script src="img_&_Vids/form.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
