--- a/contactus.html
+++ b/contactus.html
@@ -44,8 +44,35 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="adminPage.html">Post Event</a>
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
         </li>
+  
+        <!-- Login Modal -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center display-4" style="color: #054a29;" id="loginModalLabel">Admin Login</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="loginForm">
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" id="username" required>
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
       </ul>
     </div>
   </nav>
@@ -72,7 +99,7 @@
                 <textarea  type="text" class="form-control" required id="exampleFormControlTextarea1"  placeholder="Enter your message here..." rows="5"></textarea>
               </div>
               <div class="mb-3">
-                <button onclick="validateForm()" class="btn btn-primary">Submit</button>
+                <button onclick="validateForm()" class="btn btn-primary" style="border-radius: 25px; border-color: #054a29;">Submit</button>
               </div>
             </form>
           </div>
