--- a/index.html
+++ b/index.html
@@ -44,8 +44,38 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link " href="adminPage.html">Post Event</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
       </li>
+
+      <!-- Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-center display-4" style="color: #054a29;" id="loginModalLabel">Admin Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="loginForm">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+      <!--  -->
     </ul>
   </div>
 </nav>
@@ -149,6 +179,7 @@
   </div>
 </div>
 
+<script src="img_&_Vids/form.js"></script>
 
 <!-- Bootstrap JS and Popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
