fixing post creation function

--- a/Gallery.html
+++ b/Gallery.html
@@ -47,7 +47,7 @@
         <a class="nav-link active" style="color: #00a8e8;" href="Gallery.html">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"> <i class="fas fa-user-circle"></i> Admin</a>
       </li>
 
       <!-- Login Modal -->
@@ -70,7 +70,7 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" required>
           </div>
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary" style="color: #bfd8bd; border-radius: 25px;">Login</button>
         </form>
       </div>
     </div>
