--- a/about_bomojay.html
+++ b/about_bomojay.html
@@ -44,7 +44,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"> <i class="fas fa-user-circle"></i> Admin</a>
       </li>
 
       <!-- Login Modal -->
@@ -67,7 +67,7 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" required>
           </div>
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary" style="color: #bfd8bd; border-radius: 25px;">Login</button>
         </form>
       </div>
     </div>
