--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Admin</a>
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"> <i class="fas fa-user-circle"></i> Admin</a>
         </li>
   
         <!-- Login Modal -->
@@ -67,7 +67,7 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" id="password" required>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary" style="color: #bfd8bd; border-radius: 25px;">Login</button>
           </form>
         </div>
       </div>
@@ -99,7 +99,7 @@
                 <textarea  type="text" class="form-control" required id="exampleFormControlTextarea1"  placeholder="Enter your message here..." rows="5"></textarea>
               </div>
               <div class="mb-3">
-                <button onclick="validateForm()" class="btn btn-primary" style="border-radius: 25px; border-color: #054a29;">Submit</button>
+                <button onclick="validateForm()" class="btn btn-primary" style="border-radius: 25px; border-color: #054a29; color: #bfd8bd;">Submit</button>
               </div>
             </form>
           </div>
